# waveFunc

./: CMakeLists.txt  readme.md
include/: libs.h  misc.h  myClock.h  myWindow.h
shaders/: heatfunc.fragmentshader  output.fragmentshader  passthrough.vertexshader  wavefunc.fragmentshader
src/: CMakeLists.txt  misc.cpp  myClock.cpp  myWindow.cpp  waveFunc.cpp
